# Muti-agent

./: .env.example  .gitignore  README.md  USER_GUIDE.md  pyproject.toml
design-system/context-atlas/: MASTER.md
long_context_agent/: __init__.py  artifacts.py  benchmark.py  document.py  file_parser.py  llm.py  orchestrator.py  schemas.py  tokens.py  web_search.py  web_server.py
scripts/: generate_test_document.py
test_data/: enterprise_research_128k.md  test_cases.json
tests/: test_file_parser.py  test_long_context.py  test_web_search.py  test_web_server.py
web/: app.js  index.html  styles.css  test.html  test.js
